# wxo-bootcamp-mcp-server

./: .config.yaml  .docker_ignore  .gitignore  .pycodestyle  .pylintrc  .pyspelling.yml  .whitesource  ContainerFile  app.py  hosptial_data_set_server.py  pyproject.toml  readme.md  requirements.txt  whitesource.config
data/: wxo_bootcamp_data.py
docs/: README.md  healthcare_mcp_tools.html
models/: data_endinner_adv_models.py  wxo_bootcamp_models.py
src/hospital_data_server/: app.py  app_sse.py  app_stdio.py  hospital_data_tools.py
src/hospital_data_server/data/: 1000_transcripts.json  device_stock_levels.csv  device_suppliers.csv  drug_data.csv  drug_stock_levels.csv  drug_suppliers.csv  wxo_bootcamp_data.py
src/hospital_data_server/models/: data_enginner_adv_models.py  wxo_bootcamp_models.py
src/hospital_data_server/util/: load_data.py
src/wxo_bootcamp_mcp_server/: app_sse.py  app_stdio.py  wxo_bootcamp_enum_constants.py  wxo_bootcamp_tools.py
src/wxo_bootcamp_mcp_server/data/: 1000_transcripts.csv  patients.csv  wxo_bootcamp_data.py
src/wxo_bootcamp_mcp_server/util/: load_data.py  pydantic_to_mcp.py
src/wxo_bootcamp_server/: app_stdio.py
